--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devuri/wpframework",
+    "name": "devuri/raydium",
     "type": "project",
     "license": "MIT",
     "description": "Effortlessly spin up a fully-configured WordPress site in no time, specifically engineered for rapid development and deployment of secure, scalable WordPress applications, that support multiple tenants from a single installation.",
